// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the LoanDetails component renders a message when fetching fails 1`] = `
<LoanDetails
  actionLoading={false}
  data={Object {}}
  error={Object {}}
  fetchLoanDetails={[Function]}
  isLoading={false}
  loanActionError={true}
  postLoanAction={[Function]}
>
  <section>
    <WihLoader
      actionLoading={false}
      data={Object {}}
      error={Object {}}
      fetchLoanDetails={[Function]}
      isLoading={false}
      loanActionError={true}
      postLoanAction={[Function]}
    >
      <WithError
        actionLoading={false}
        data={Object {}}
        error={Object {}}
        fetchLoanDetails={[Function]}
        loanActionError={true}
        postLoanAction={[Function]}
      >
        <ApiError
          error={Object {}}
        >
          <Message
            header="Oups, failed to fetch data from API!"
            icon="exclamation"
          >
            <div
              className="ui icon message"
            >
              <Icon
                as="i"
                name="exclamation"
              >
                <i
                  aria-hidden="true"
                  className="exclamation icon"
                />
              </Icon>
              <MessageContent>
                <div
                  className="content"
                >
                  <MessageHeader
                    content="Oups, failed to fetch data from API!"
                  >
                    <div
                      className="header"
                    >
                      Oups, failed to fetch data from API!
                    </div>
                  </MessageHeader>
                </div>
              </MessageContent>
            </div>
          </Message>
        </ApiError>
      </WithError>
    </WihLoader>
    <LoanActions
      actionLoading={false}
      data={Object {}}
      error={Object {}}
      fetchLoanDetails={[Function]}
      isLoading={false}
      loanActionError={true}
      onAction={[Function]}
      postLoanAction={[Function]}
    >
      <List
        horizontal={true}
      >
        <div
          className="ui horizontal list"
          role="list"
        />
      </List>
    </LoanActions>
  </section>
</LoanDetails>
`;

exports[`tests the LoanDetails component renders the details page when fetching succeeds 1`] = `
<LoanDetails
  actionLoading={false}
  data={
    Object {
      "availableActions": Object {
        "action": "action",
      },
      "metadata": Object {
        "title": "title",
      },
    }
  }
  error={
    Object {
      "message": "error",
    }
  }
  fetchLoanDetails={[Function]}
  isLoading={false}
  loanActionError={false}
  postLoanAction={[Function]}
>
  <section>
    <WihLoader
      actionLoading={false}
      data={
        Object {
          "availableActions": Object {
            "action": "action",
          },
          "metadata": Object {
            "title": "title",
          },
        }
      }
      error={
        Object {
          "message": "error",
        }
      }
      fetchLoanDetails={[Function]}
      isLoading={false}
      loanActionError={false}
      postLoanAction={[Function]}
    >
      <WithError
        actionLoading={false}
        data={
          Object {
            "availableActions": Object {
              "action": "action",
            },
            "metadata": Object {
              "title": "title",
            },
          }
        }
        error={
          Object {
            "message": "error",
          }
        }
        fetchLoanDetails={[Function]}
        loanActionError={false}
        postLoanAction={[Function]}
      >
        <ApiError
          error={
            Object {
              "message": "error",
            }
          }
        >
          <Message
            content="error"
            header="Oups, failed to fetch data from API!"
            icon="exclamation"
          >
            <div
              className="ui icon message"
            >
              <Icon
                as="i"
                name="exclamation"
              >
                <i
                  aria-hidden="true"
                  className="exclamation icon"
                />
              </Icon>
              <MessageContent>
                <div
                  className="content"
                >
                  <MessageHeader
                    content="Oups, failed to fetch data from API!"
                  >
                    <div
                      className="header"
                    >
                      Oups, failed to fetch data from API!
                    </div>
                  </MessageHeader>
                  <p>
                    error
                  </p>
                </div>
              </MessageContent>
            </div>
          </Message>
        </ApiError>
      </WithError>
    </WihLoader>
    <LoanActions
      actionLoading={false}
      data={
        Object {
          "availableActions": Object {
            "action": "action",
          },
          "metadata": Object {
            "title": "title",
          },
        }
      }
      error={
        Object {
          "message": "error",
        }
      }
      fetchLoanDetails={[Function]}
      isLoading={false}
      loanActionError={false}
      onAction={[Function]}
      postLoanAction={[Function]}
    >
      <List
        horizontal={true}
      >
        <div
          className="ui horizontal list"
          role="list"
        >
          <ListItem
            key="action"
          >
            <div
              className="item"
              onClick={[Function]}
              role="listitem"
            >
              <Button
                as="button"
                onClick={[Function]}
                primary={true}
                role="button"
              >
                <button
                  className="ui primary button"
                  onClick={[Function]}
                  role="button"
                >
                  action
                </button>
              </Button>
            </div>
          </ListItem>
        </div>
      </List>
    </LoanActions>
  </section>
</LoanDetails>
`;

exports[`tests the LoanDetails component renders the loader component when fetching is in progress 1`] = `
<LoanDetails
  actionLoading={false}
  data={Object {}}
  error={Object {}}
  fetchLoanDetails={[Function]}
  isLoading={true}
  loanActionError={false}
  postLoanAction={[Function]}
>
  <section>
    <WihLoader
      actionLoading={false}
      data={Object {}}
      error={Object {}}
      fetchLoanDetails={[Function]}
      isLoading={true}
      loanActionError={false}
      postLoanAction={[Function]}
    >
      <ApiLoader>
        <Loader
          active={true}
          inline="centered"
          size="huge"
        >
          <div
            className="ui huge active centered inline loader"
          />
        </Loader>
      </ApiLoader>
    </WihLoader>
    <LoanActions
      actionLoading={false}
      data={Object {}}
      error={Object {}}
      fetchLoanDetails={[Function]}
      isLoading={true}
      loanActionError={false}
      onAction={[Function]}
      postLoanAction={[Function]}
    >
      <List
        horizontal={true}
      >
        <div
          className="ui horizontal list"
          role="list"
        />
      </List>
    </LoanActions>
  </section>
</LoanDetails>
`;
